src/test/ui/shadowed/shadowed-use-visibility.stderr
error[E0603]: module import `bar` is private
  --> $DIR/shadowed-use-visibility.rs:9:14
   |
LL |     use foo::bar::f as g;
   |              ^^^ this module import is private
   |
note: the used restricted re-export of `bar`
  --> $DIR/shadowed-use-visibility.rs:4:9
   |
LL |     use foo as bar;
   |         ^^^^^^^^^^
note: the re-exported module `bar` is defined here
  --> $DIR/shadowed-use-visibility.rs:1:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module import `f` is private
  --> $DIR/shadowed-use-visibility.rs:15:10
   |
LL | use bar::f::f;
   |          ^ this module import is private
   |
note: the used restricted re-export of `f`
  --> $DIR/shadowed-use-visibility.rs:11:9
   |
LL |     use foo as f;
   |         ^^^^^^^^
note: the re-exported module `f` is defined here
  --> $DIR/shadowed-use-visibility.rs:1:1
   |
LL | mod foo {
   | ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
